Add color for controls monitor

--- a/src/style.css
+++ b/src/style.css
@@ -156,8 +156,12 @@
   white-space: pre-wrap;
   background-color: #0fbd8c;
 }
+/* Make sure to match background-color with primary color of each category */
 .sc-monitor-root[data-opcode^="motion_"] .sc-monitor-value-color {
   background-color: #4c97ff;
+}
+.monitor-root[data-opcode^="control_"] .monitor-value-color {
+  background-color: #ffab19;
 }
 .sc-monitor-root[data-opcode^="sensing_"] .sc-monitor-value-color {
   background-color: #5cb1d6;
