--- a/src/style.css
+++ b/src/style.css
@@ -345,3 +345,12 @@
 .sc-dropping {
   background-color: var(--sc-accent-color-transparent);
 }
+
+.sc-pseudo-console-wrapper {
+    font-family: monospace;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    color: white;
+    overflow: auto;
+}
